crates/ssa-workflow-derive/tests/ui/missing_version.stderr
error: missing #[cache_schema(version = N)]
 --> tests/ui/missing_version.rs:3:10
  |
3 | #[derive(CacheSchema)]
  |          ^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `CacheSchema` (in Nightly builds, run with -Z macro-backtrace for more info)
